create the canvas and draw on it

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
+
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<head>
+    <meta charset="utf-8" />
+    <title> eling's web game</title>
+    <style>
+        canvas {
+            background: #eee;
+            display: block;
+            margin: auto;
+            margin-top: 100px;
+        }
+    </style>
+</head>
+
+    <body>
+        <canvas id="myCanvas" width="480" height="320"></canvas>
+        <script src="js/script.js"></script>
+    </body>
 </html>
