--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     </style>
 </head>
 
-    <body>
-        <canvas id="myCanvas" width="480" height="320"></canvas>
-        <script src="js/script.js"></script>
-    </body>
+<body>
+    <canvas id="myCanvas" width="480" height="320"></canvas>
+    <script src="map/map1.js"></script>
+    <script src="js/script.js"></script>
+</body>
 </html>
