--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <canvas id="myCanvas" width="480" height="320"></canvas>
     <script src="map/map1.js"></script>
     <script src="map/map2.js"></script>
+    <script src="map/map3.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
